--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,8 +99,8 @@ LastExecutedLaunchName=MSI
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1274
-NewWindowHeight=702
+NewWindowWidth=1276
+NewWindowHeight=710
 MultipleInstancePositions=(X=320,Y=180)
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 
@@ -133,13 +133,13 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/Tutorial
-MRUItem2=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem5=/Game/ThirdPersonBP/Maps/Main
-MRUItem6=/Game/ThirdPersonBP/Maps/Water
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/ThirdPersonBP/Maps/Building
+MRUItem2=/Game/ThirdPersonBP/Maps/Main
+MRUItem3=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem4=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem5=/Game/ThirdPersonBP/Maps/Water
+MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -175,10 +175,18 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/Building
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Dialogue.Dialogue
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/SoulBase.SoulBase
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/LevelCompletion.LevelCompletion
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/PauseMenu.PauseMenu
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -893,8 +901,8 @@ TextBlock.Clipping=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
 Button.Layout=True
-Button.Appearance=False
-Button.Interaction=False
+Button.Appearance=True
+Button.Interaction=True
 Button.Accessibility=False
 Button.Behavior=False
 Button.Render Transform=False
@@ -1123,8 +1131,92 @@ Actor_Blueprint1_C.Collision=True
 Actor_Blueprint1_C.Input=True
 Actor_Blueprint1_C.Actor=True
 Actor_Blueprint1_C.Tick=True
+Dialogue_C.Appearance=True
+Dialogue_C.Input=True
+Dialogue_C.Accessibility=True
+Dialogue_C.Interaction=True
+Dialogue_C.Behavior=True
+Dialogue_C.Render Transform=True
+Dialogue_C.Performance=True
+Dialogue_C.Clipping=True
+Dialogue_C.Navigation=True
+Dialogue_C.Localization=True
+Dialogue_C.Designer=True
+Dialogue_C.Layout=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+Dialogue_C.Default=True
+Soul3_C.Default=True
+Soul2_C.Default=True
+SoulBase_C.Default=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.ComponentTick=True
+TextRenderComponent.Navigation=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+LevelCompletion_C.Appearance=True
+LevelCompletion_C.Designer=True
+LevelCompletion_C.Input=True
+LevelCompletion_C.Interaction=True
+LevelCompletion_C.Performance=True
+LevelCompletion_C.Layout=True
+LevelCompletion_C.Behavior=True
+LevelCompletion_C.Render Transform=True
+LevelCompletion_C.Accessibility=True
+LevelCompletion_C.Clipping=True
+LevelCompletion_C.Navigation=True
+LevelCompletion_C.Localization=True
+Soul1_C.Default=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+Building_C.Tick=True
+Building_C.Replication=True
+Building_C.Actor=True
+Building_C.Input=True
+ThirdPersonExampleMap_C.Tick=True
+ThirdPersonExampleMap_C.Replication=True
+ThirdPersonExampleMap_C.Actor=True
+ThirdPersonExampleMap_C.Input=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+ThirdPersonGameMode_C.Tick=True
+ThirdPersonGameMode_C.Classes=True
+ThirdPersonGameMode_C.Game=True
+ThirdPersonGameMode_C.GameMode=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Soul1.Soul1;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Classic_chair.SM_Classic_chair;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Explosion.P_Explosion;
@@ -1144,7 +1236,6 @@ RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
 RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin_Female.SK_Mannequin_Female;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Classic_table.SM_Classic_table;
-RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1152,9 +1243,9 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshActor=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshMergeCullingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SwimSphere_bp_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent=
@@ -1177,8 +1268,8 @@ SkinnedMeshComponent=
 CapsuleComponent=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
+ContentWidget=
+PanelWidget=
 Widget=
 Visual=
 Image="\"Object.Appearance.Brush\" "
@@ -1186,26 +1277,26 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/StarterContent/Particles/Actor_Blueprint1
-MRUItem2=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem3=/Game/CustomMaterials/Actor_Blueprint
-MRUItem4=/Game/FreeFurniturePack/Character_Blueprint
-MRUItem5=/Game/ThirdPersonBP/Maps/Building
-MRUItem6=/Game/Actor_Blueprint
-MRUItem7=/Game/SM_DoorFrame_Blueprint
-MRUItem8=/Game/Tutorial
-MRUItem9=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem11=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem12=/Game/ThirdPersonBP/Maps/Main
-MRUItem13=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem14=/Game/ThirdPersonBP/Blueprints/MainMenu
-MRUItem15=/Game/ThirdPersonBP/Maps/Water
-MRUItem16=/Game/ThirdPersonBP/Blueprints/SoulBase
-MRUItem17=/Game/StarterContent/Textures/a7e10816-0ca9-4268-a947-a5fa8a7187d9_930871_TABLET_LANDSCAPE_LARGE_16_9__2_
-MRUItem18=/Game/StarterContent/Textures/NewPaperSprite
-MRUItem19=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Maps/Building
+MRUItem3=/Game/ThirdPersonBP/Maps/Main
+MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Soul1
+MRUItem7=/Game/ThirdPersonBP/Blueprints/LevelCompletion
+MRUItem8=/Game/ThirdPersonBP/Blueprints/LevelComplete
+MRUItem9=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem10=/Game/ThirdPersonBP/Blueprints/MainMenu
+MRUItem11=/Game/ThirdPersonBP/Blueprints/PauseMenu
+MRUItem12=/Game/ThirdPersonBP/Blueprints/DialogueStructure
+MRUItem13=/Game/ThirdPersonBP/Blueprints/Interact_I
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem15=/Game/ThirdPersonBP/Blueprints/SoulBase
+MRUItem16=/Game/ThirdPersonBP/Blueprints/Dialogue
+MRUItem17=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem18=/Game/ThirdPersonBP/Maps/Water
+MRUItem19=/Game/StarterContent/Particles/Actor_Blueprint1
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
@@ -1220,6 +1311,9 @@ MRUItem19=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/ThirdPersonBP/Maps/TutorialLvl_BuiltData.TutorialLvl_BuiltData=0
 /Game/SM_DoorFrame_Blueprint.SM_DoorFrame_Blueprint=1
+/Game/ThirdPersonBP/Blueprints/DialogueStructure.DialogueStructure=0
+/Game/ThirdPersonBP/Blueprints/Interact_I.Interact_I=0
+/Game/ThirdPersonBP/Maps/Main.Main:PersistentLevel.Main=0
 
 [MaterialEditor]
 PrimType=1
@@ -2218,7 +2312,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailCustomWidgetExpansion]
 CableComponent=CableComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
-ThirdPersonCharacter_C=CableComponent.Collision.Collision,
+ThirdPersonCharacter_C=
 K2Node_VariableSet=CableComponent.Collision.Collision,
 K2Node_VariableGet=CableComponent.Collision.Collision,
 PropertyWrapper=CableComponent.Collision.Collision,
@@ -2235,6 +2329,10 @@ Character_Blueprint_C=CableComponent.Collision.Collision,
 SceneComponent=
 Actor_Blueprint1_C=CableComponent.Collision.Collision,
 Actor_Blueprint_C=CableComponent.Collision.Collision,
+Dialogue_C=
+SoulBase_C=
+LevelCompletion_C=
+MovementComponent=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
