--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,13 +133,13 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem2=/Game/ThirdPersonBP/Maps/TutorialLvl
 MRUItem3=/Game/ThirdPersonBP/Maps/Main
-MRUItem4=/Game/Tutorial
-MRUItem5=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem6=/Game/ThirdPersonBP/Maps/Water
+MRUItem4=/Game/ThirdPersonBP/Maps/Water
+MRUItem5=/Game/ThirdPersonBP/Maps/Building
+MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -175,11 +175,14 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/Building
+LastLevel=/Game/ThirdPersonBP/Maps/Mountain
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint
+OpenAssetsAtExit=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere
+OpenAssetsAtExit=/Engine/EngineSky/C_Sky_Zenith_Color.C_Sky_Zenith_Color
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Soul3.Soul3
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1181,8 +1184,17 @@ ThirdPersonExampleMap_C.Default=True
 Building_C.Default=True
 MeshProxySettingsObject.ProxySettings=True
 MeshInstancingSettingsObject.Instancing=True
+BP_Sky_Sphere_C.Tick=True
+CurveLinearColor.Color=True
+CurveLinearColor.File Path=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+SoulBase_C.Default=True
+Soul1_C.Default=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1202,7 +1214,6 @@ RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Modern_Chair_1.SM_Modern_Chair_1;
-RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Bed_Table.SM_Bed_Table;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1242,28 +1253,30 @@ Visual=
 Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
+SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
+Info="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem1=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem2=/Game/ThirdPersonBP/Maps/Building
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem7=/Game/ThirdPersonBP/Maps/Main
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem9=/Game/StarterContent/Textures/Cube74_Blueprint
-MRUItem10=/Game/StarterContent/Particles/Actor_Blueprint1
-MRUItem11=/Game/CustomMaterials/Actor_Blueprint
-MRUItem12=/Game/FreeFurniturePack/Character_Blueprint
-MRUItem13=/Game/Actor_Blueprint
-MRUItem14=/Game/SM_DoorFrame_Blueprint
-MRUItem15=/Game/Tutorial
-MRUItem16=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem17=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem18=/Game/ThirdPersonBP/Blueprints/MainMenu
-MRUItem19=/Game/ThirdPersonBP/Maps/Water
+MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem1=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem4=/Game/ThirdPersonBP/Maps/Main
+MRUItem5=/Engine/EngineSky/C_Sky_Zenith_Color
+MRUItem6=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem7=/Game/ThirdPersonBP/Maps/Water
+MRUItem8=/Game/StarterContent/Particles/Actor_Blueprint
+MRUItem9=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem10=/Game/ThirdPersonBP/Maps/Building
+MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem12=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem14=/Game/StarterContent/Textures/Cube74_Blueprint
+MRUItem15=/Game/StarterContent/Particles/Actor_Blueprint1
+MRUItem16=/Game/CustomMaterials/Actor_Blueprint
+MRUItem17=/Game/FreeFurniturePack/Character_Blueprint
+MRUItem18=/Game/Actor_Blueprint
+MRUItem19=/Game/SM_DoorFrame_Blueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
