--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,11 +133,11 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem3=/Game/ThirdPersonBP/Maps/Main
-MRUItem4=/Game/ThirdPersonBP/Maps/Water
+MRUItem0=/Game/ThirdPersonBP/Maps/Water
+MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem4=/Game/ThirdPersonBP/Maps/Main
 MRUItem5=/Game/ThirdPersonBP/Maps/Building
 MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
@@ -175,13 +175,12 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/Mountain
+LastLevel=/Game/ThirdPersonBP/Maps/Water
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint
 OpenAssetsAtExit=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere
-OpenAssetsAtExit=/Engine/EngineSky/C_Sky_Zenith_Color.C_Sky_Zenith_Color
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Soul3.Soul3
 
 [DetailCategories]
@@ -1194,10 +1193,17 @@ SoulBase_C.Default=True
 Soul1_C.Default=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M.T_Perlin_Noise_M;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/CustomMaterials/SoulMat3.SoulMat3;
 RecentlyPlaced=/Game/CustomMaterials/SoulMat1.SoulMat1;
 RecentlyPlaced=/Game/CustomMaterials/HookMaterial.HookMaterial;
@@ -1207,13 +1213,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_N.T_Tech_Dot_N;
 RecentlyPlaced=/Game/StarterContent/Textures/T_TableRound_M_Mat.T_TableRound_M_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Poured_D.T_Concrete_Poured_D;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
-RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
-RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Classic_chair.SM_Classic_chair;
-RecentlyPlaced=/Game/StarterContent/Particles/P_Explosion.P_Explosion;
-RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
-RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
-RecentlyPlaced=/Game/FreeFurniturePack/Meshes/SM_Modern_Chair_1.SM_Modern_Chair_1;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1254,17 +1253,17 @@ Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
-Info=
+Info="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem3=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem4=/Game/ThirdPersonBP/Maps/Main
-MRUItem5=/Engine/EngineSky/C_Sky_Zenith_Color
-MRUItem6=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem7=/Game/ThirdPersonBP/Maps/Water
+MRUItem0=/Game/ThirdPersonBP/Maps/Water
+MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem5=/Game/ThirdPersonBP/Maps/Main
+MRUItem6=/Engine/EngineSky/C_Sky_Zenith_Color
+MRUItem7=/Engine/EngineSky/BP_Sky_Sphere
 MRUItem8=/Game/StarterContent/Particles/Actor_Blueprint
 MRUItem9=/Game/ThirdPersonBP/Blueprints/Soul2
 MRUItem10=/Game/ThirdPersonBP/Maps/Building
@@ -1292,6 +1291,7 @@ MRUItem19=/Game/SM_DoorFrame_Blueprint
 /Game/ThirdPersonBP/Maps/TutorialLvl_BuiltData.TutorialLvl_BuiltData=0
 /Game/SM_DoorFrame_Blueprint.SM_DoorFrame_Blueprint=1
 /Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap=1
+/Engine/EngineSky/C_Sky_Zenith_Color.C_Sky_Zenith_Color=1
 
 [MaterialEditor]
 PrimType=1
