--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,11 +134,11 @@ CameraSpeed=5
 
 [MRU]
 MRUItem0=/Game/ThirdPersonBP/Maps/Water
-MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem1=/Game/ThirdPersonBP/Maps/Building
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem4=/Game/ThirdPersonBP/Maps/Main
-MRUItem5=/Game/ThirdPersonBP/Maps/Building
+MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem5=/Game/ThirdPersonBP/Maps/Main
 MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 
@@ -179,8 +179,6 @@ LastLevel=/Game/ThirdPersonBP/Maps/Water
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint
-OpenAssetsAtExit=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Soul3.Soul3
 
 [DetailCategories]
@@ -1194,13 +1192,14 @@ Soul1_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Perlin_Noise_M.T_Perlin_Noise_M;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp;
@@ -1212,7 +1211,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_M.T_Tech_Dot_M;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_N.T_Tech_Dot_N;
 RecentlyPlaced=/Game/StarterContent/Textures/T_TableRound_M_Mat.T_TableRound_M_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Poured_D.T_Concrete_Poured_D;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1253,20 +1251,20 @@ Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
-Info="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
+Info=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Maps/Water
-MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem1=/Game/ThirdPersonBP/Maps/Building
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem5=/Game/ThirdPersonBP/Maps/Main
-MRUItem6=/Engine/EngineSky/C_Sky_Zenith_Color
-MRUItem7=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem8=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem9=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem10=/Game/ThirdPersonBP/Maps/Building
+MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem4=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem5=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem6=/Game/ThirdPersonBP/Maps/Main
+MRUItem7=/Engine/EngineSky/C_Sky_Zenith_Color
+MRUItem8=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem9=/Game/StarterContent/Particles/Actor_Blueprint
+MRUItem10=/Game/ThirdPersonBP/Blueprints/Soul2
 MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 MRUItem12=/Game/ThirdPersonBP/Blueprints/Respawn_bp
 MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
@@ -1292,6 +1290,8 @@ MRUItem19=/Game/SM_DoorFrame_Blueprint
 /Game/SM_DoorFrame_Blueprint.SM_DoorFrame_Blueprint=1
 /Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap=1
 /Engine/EngineSky/C_Sky_Zenith_Color.C_Sky_Zenith_Color=1
+/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=1
+/Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint=1
 
 [MaterialEditor]
 PrimType=1
