--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,9 +133,9 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem1=/Game/ThirdPersonBP/Maps/Water
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Maps/Building
 MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
 MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
 MRUItem5=/Game/ThirdPersonBP/Maps/Main
@@ -147,7 +147,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
@@ -175,11 +175,17 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/Building
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Soul3.Soul3
+CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/DJump_bp.DJump_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Grapple_bp.Grapple_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Swim_bp.Swim_bp
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1189,6 +1195,7 @@ Brush.Geometry=True
 Brush.Surface Properties=True
 SoulBase_C.Default=True
 Soul1_C.Default=True
+K2Node_InputAxisEvent.Input=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
@@ -1254,26 +1261,26 @@ SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.Occ
 Info=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/ThirdPersonBP/Maps/Water
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem5=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem6=/Game/ThirdPersonBP/Maps/Main
-MRUItem7=/Engine/EngineSky/C_Sky_Zenith_Color
-MRUItem8=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem9=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem10=/Game/ThirdPersonBP/Blueprints/Soul2
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem12=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem14=/Game/StarterContent/Textures/Cube74_Blueprint
-MRUItem15=/Game/StarterContent/Particles/Actor_Blueprint1
-MRUItem16=/Game/CustomMaterials/Actor_Blueprint
-MRUItem17=/Game/FreeFurniturePack/Character_Blueprint
-MRUItem18=/Game/Actor_Blueprint
-MRUItem19=/Game/SM_DoorFrame_Blueprint
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem1=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem2=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem3=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem6=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem7=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem8=/Game/ThirdPersonBP/Maps/Water
+MRUItem9=/Game/ThirdPersonBP/Maps/Building
+MRUItem10=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem12=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem13=/Game/ThirdPersonBP/Maps/Main
+MRUItem14=/Engine/EngineSky/C_Sky_Zenith_Color
+MRUItem15=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem16=/Game/StarterContent/Particles/Actor_Blueprint
+MRUItem17=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem18=/Game/StarterContent/Textures/Cube74_Blueprint
+MRUItem19=/Game/StarterContent/Particles/Actor_Blueprint1
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
@@ -1389,7 +1396,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1292.000 Y=732.000
+WindowSize=X=1293.600 Y=733.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2290,7 +2297,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailCustomWidgetExpansion]
 CableComponent=CableComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
-ThirdPersonCharacter_C=CableComponent.Collision.Collision,
+ThirdPersonCharacter_C=
 K2Node_VariableSet=CableComponent.Collision.Collision,
 K2Node_VariableGet=CableComponent.Collision.Collision,
 PropertyWrapper=CableComponent.Collision.Collision,
@@ -2309,6 +2316,7 @@ Actor_Blueprint1_C=CableComponent.Collision.Collision,
 Actor_Blueprint_C=CableComponent.Collision.Collision,
 ThirdPersonExampleMap_C=
 Building_C=
+ThirdPersonGameMode_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2477,4 +2485,5 @@ bDeleteSourceFilesWithAssets=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
