--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,11 +133,11 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem2=/Game/ThirdPersonBP/Maps/Water
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem0=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/Maps/Building
+MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem4=/Game/ThirdPersonBP/Maps/Water
 MRUItem5=/Game/ThirdPersonBP/Maps/Main
 MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
@@ -175,12 +175,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/Building
+LastLevel=/Game/ThirdPersonBP/Maps/TutorialLvl
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/LevelCompletion.LevelCompletion
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Soul3.Soul3
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1218,8 +1217,9 @@ LevelCompletion_C.Navigation=True
 LevelCompletion_C.Localization=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Rock/T_Cave_Rock_Large02_M.T_Cave_Rock_Large02_M;
@@ -1237,7 +1237,6 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_Mat.T_Tech_Dot_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01_Mat.T_Gradinet_01_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01.T_Gradinet_01;
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1281,21 +1280,21 @@ SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.Occ
 Info=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem2=/Game/ThirdPersonBP/Maps/Water
-MRUItem3=/Game/ThirdPersonBP/Blueprints/LevelCompletion
-MRUItem4=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem6=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem7=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem8=/Game/ThirdPersonBP/Blueprints/Dash_bp
-MRUItem9=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem10=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem13=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem14=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem0=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem1=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/ThirdPersonBP/Maps/Building
+MRUItem4=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem5=/Game/ThirdPersonBP/Maps/Water
+MRUItem6=/Game/ThirdPersonBP/Blueprints/LevelCompletion
+MRUItem7=/Game/ThirdPersonBP/Blueprints/PauseMenu
+MRUItem8=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem9=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem10=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem12=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 MRUItem15=/Game/ThirdPersonBP/Maps/Main
 MRUItem16=/Engine/EngineSky/C_Sky_Zenith_Color
 MRUItem17=/Engine/EngineSky/BP_Sky_Sphere
@@ -2345,6 +2344,10 @@ PostProcessVolume=PostProcessVolume.Lens.Lens
 BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 Water_C=CableComponent.Collision.Collision,
 PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Swim_bp_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Respawn_bp_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+SoulBase_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Soul3_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
